added components to create, view and update cards

--- a/force-app/main/default/classes/TrelloSyncController.cls
+++ b/force-app/main/default/classes/TrelloSyncController.cls
@@ -227,6 +227,7 @@ public with sharing class TrelloSyncController {
         List<Card__c> availableCardList = [
             SELECT Card_Id__c
             FROM Card__c
+            WHERE Card_Id__c != null
         ];
 
         Set<String> cardIds = new Set<String>();
