--- a/force-app/main/default/classes/TrelloSyncSch.cls
+++ b/force-app/main/default/classes/TrelloSyncSch.cls
@@ -1,6 +1,11 @@
 global with sharing class TrelloSyncSch implements Schedulable {
 
     global void execute(SchedulableContext sc) {
+        TrelloSyncSch.executeSyncCards();
+    }
+
+    @future (callout=true)
+    private static void executeSyncCards() {
         TrelloSyncController.syncCards();
     }
 }
