rewrote tests and mock

--- a/force-app/main/default/classes/KanbanBoardControllerTest.cls
+++ b/force-app/main/default/classes/KanbanBoardControllerTest.cls
@@ -3,8 +3,7 @@ private class KanbanBoardControllerTest {
 
     @testSetup
     private static void setupTestData() {
-
-        TrelloSettings__c trelloSettings = new TrelloSettings__c(
+        TrelloSettings__c newTrelloSettings = new TrelloSettings__c(
             Api_key__c = 'testApiKey',
             Board_Name__c = 'testBoardName',
             Board_URL__c = 'https://test.com/testBoardName',
@@ -12,7 +11,7 @@ private class KanbanBoardControllerTest {
             User_Name__c = 'TestUser'
         );
 
-        insert trelloSettings;
+        insert newTrelloSettings;
 
         Card__c newCard = new Card__c(
             Card_Id__c = 'cardId',
@@ -26,23 +25,60 @@ private class KanbanBoardControllerTest {
 
         insert newCard;
 
-        System.assertNotEquals(null, trelloSettings.Id, 'Record is not created');
+        System.assertNotEquals(null, newTrelloSettings.Id, 'Record is not created');
         System.assertNotEquals(null, newCard.Id, 'Record is not created');
     }
 
     @isTest
     private static void testGetTrelloCards() {
 
-        Test.setMock(HttpCalloutMock.class, new TrelloSyncCalloutMock());
+        String endPoint = Label.Trello_Sync_Endpoint;
+        TrelloSettings__c trelloSettings = TrelloSettings__c.getOrgDefaults();
+        List<String> endPointList = new List<String> {
+            String.format(endPoint, new List<String> {
+                'members',
+                trelloSettings.User_Name__c,
+                'boards',
+                trelloSettings.Api_key__c,
+                trelloSettings.Token__c
+            }),
+            String.format(endPoint, new List<String> {
+                'boards',
+                'boardId',
+                'lists',
+                trelloSettings.Api_key__c,
+                trelloSettings.Token__c
+            }),
+            String.format(endPoint, new List<String> {
+                'boards',
+                'boardId',
+                'members',
+                trelloSettings.Api_key__c,
+                trelloSettings.Token__c
+            }),
+            String.format(endPoint, new List<String> {
+                'boards',
+                'boardId',
+                'cards',
+                trelloSettings.Api_key__c,
+                trelloSettings.Token__c
+            })
+        };
+
+        Test.setMock(HttpCalloutMock.class, new TrelloSyncCalloutMock(endPointList));
         Test.startTest();
 
         KanbanBoardController.getSync();
 
         Test.stopTest();
 
-        TrelloSettings__c trelloSettings = TrelloSettings__c.getOrgDefaults();
+        TrelloSettings__c updatedTrelloSettings = TrelloSettings__c.getOrgDefaults();
 
-        System.assertEquals(System.now(), trelloSettings.Sync_Date__c, 'Sync failed');
+        System.assertEquals(
+            System.now().format('MM/dd/yyyy HH:mm'),
+            updatedTrelloSettings.Sync_Date__c.format('MM/dd/yyyy HH:mm'),
+            'Sync failed'
+        );
     }
 
     @isTest
