rewrote components and classes

--- a/force-app/main/default/classes/KanbanBoardController.cls
+++ b/force-app/main/default/classes/KanbanBoardController.cls
@@ -2,16 +2,16 @@ public with sharing class KanbanBoardController {
 
     @AuraEnabled
     public static KanbanBoard getKanbanBoard() {
-        List<Trello_Status_Setting__mdt> statusList = KanbanBoardController.getTrelloStatusSetting();
+        List<Trello_Status_Setting__mdt> statusList = TrelloStatusSetting.getTrelloStatusSetting();
         List<String> statuses = new List<String>();
         List<Card__c> availableCardList = [
             SELECT Name, Description__c, Assignee__c, Due_Date__c,
-                Status__c, StatusPosition__c, Card_Position__c, Card_Id__c
+                Status__c, Card_Position__c, Card_Id__c
             FROM Card__c
-            ORDER BY StatusPosition__c, Card_Position__c, LastModifiedDate
+            ORDER BY Card_Position__c, LastModifiedDate
         ];
 
-        TrelloSettings__c trelloSettings = TrelloSettings__c.getOrgDefaults();
+        TrelloSettings__c trelloSettings = TrelloSettings__c.getInstance();
         Datetime syncDateTime;
 
         if (trelloSettings.Sync_Date__c != null) {
@@ -19,23 +19,21 @@ public with sharing class KanbanBoardController {
         }
 
         for (Trello_Status_Setting__mdt status : statusList) {
-            statuses.add(String.valueOf(status.Status__c));
+            statuses.add(status.Status__c);
         }
 
-        return new KanbanBoard(availableCardList, statuses, String.valueOf(syncDateTime));
+        return new KanbanBoard(availableCardList, statuses, syncDateTime.format('MM.dd.yyyy HH:mm:ss'));
     }
 
     @AuraEnabled
-    public static void getUpdateStatus(String status, Integer statusPosition, String cardIds) {
-        List<Id> cardIdList = cardIds.split(',');
+    public static void getUpdateStatus(String status, List<String> cardIds) {
         List<Card__c> cardList = new List<Card__c>();
 
-        for (Integer i = 0; i < cardIdList.size(); i++) {
+        for (Integer i = 0; i < cardIds.size(); i++) {
             Card__c card = new Card__c(
-                Id = cardIdList[i],
+                Id = cardIds[i],
                 Status__c = status,
-                StatusPosition__c = statusPosition,
-                Card_Position__c = String.valueOf(statusPosition) + String.valueOf(i)
+                Card_Position__c = String.valueOf(i)
             );
 
             cardList.add(card);
@@ -57,23 +55,13 @@ public with sharing class KanbanBoardController {
         }
     }
 
-    @TestVisible
-    private static List<Trello_Status_Setting__mdt> getTrelloStatusSetting() {
-
-        return [
-            SELECT Position__c, Status__c
-            FROM Trello_Status_Setting__mdt
-            ORDER BY Position__c
-        ];
-    }
-
     public class KanbanBoard {
         @AuraEnabled
-        public List<Card__c> cardList { get; set; }
+        public List<Card__c> cardList { get; private set; }
         @AuraEnabled
-        public List<String> statusList { get; set; }
+        public List<String> statusList { get; private set; }
         @AuraEnabled
-        public String syncDate { get; set; }
+        public String syncDate { get; private set; }
 
         public KanbanBoard (List<Card__c> cards, List<String> statuses, String dateValue) {
             this.cardList = cards;
